--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="app_name">Sifrele</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
     <string name="rounded">Rounded</string>
     <string name="squared">Squared</string>
 
@@ -14,15 +13,15 @@
 
     <!-- Düzenleme Başlangıcı -->
 
+
     <!-- View Pager -->
     <string name="viewPager_mesaj">Mesajlar</string>
     <string name="viewPager_arkadas">Rehber</string>
-
     <string name="no_notes">Sorry, no contacts</string>
     <string name="menu_insert">Insert new contact</string>
     <string name="menu_delete">Delete contact</string>
-
     <string name="label_name">Name</string>
     <string name="label_address">Address</string>
+    <string name="title_activity_mesaj">Mesaj</string>
 
 </resources>
